--- a/index.html
+++ b/index.html
@@ -22,25 +22,24 @@
     <title>Reservia</title>
   </head>
   <body>
-    <div id="block_pages">
-      <!--Header-->
+    <!--Header-->
 
-      <header>
-        <div class="logo_reservia">
-          <img src="logo/Reservia@3x.png" alt="#" />
+    <header>
+      <div class="logo_reservia">
+        <img src="logo/Reservia@3x.png" alt="#" />
+      </div>
+
+      <nav>
+        <div class="contains_nav">
+          <a href="#hosting" class="nav_hosting">Hébergements</a>
+          <a href="#activity" class="nav_activity">Activités</a>
         </div>
+        <a href="#" id="inscription">S'inscrire</a>
+      </nav>
+    </header>
 
-        <nav>
-          <div class="contains_nav">
-            <a href="#hosting" class="nav_hosting">Hébergements</a>
-            <a href="#activity" class="nav_activity">Activités</a>
-          </div>
-          <a href="#" id="inscription">S'inscrire</a>
-        </nav>
-      </header>
-
-      <!--paragraphes-->
-
+    <!--paragraphes-->
+    <main>
       <section>
         <div class="section_title">
           <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
@@ -420,29 +419,28 @@
           </div>
         </div>
       </section>
+    </main>
+    <!--footer-->
 
-      <!--footer-->
+    <footer>
+      <div class="footer_about">
+        <h3>A propos</h3>
+        <a href="#"><span>Fonctionnement du site</span></a>
+        <a href="#"><span>Conditions générales de vente</span></a>
+        <a href="#"><span>Données et confidentialité</span></a>
+      </div>
 
-      <footer>
-        <div class="footer_about">
-          <h3>A propos</h3>
-          <a href="#"><span>Fonctionnement du site</span></a>
-          <a href="#"><span>Conditions générales de vente</span></a>
-          <a href="#"><span>Données et confidentialité</span></a>
-        </div>
+      <div class="footer_hosting">
+        <h3>Nos hébergements</h3>
+        <a href="#"><span>Charte qualité</span></a>
+        <a href="#"><span>Soumettre votre hôtel</span></a>
+      </div>
 
-        <div class="footer_hosting">
-          <h3>Nos hébergements</h3>
-          <a href="#"><span>Charte qualité</span></a>
-          <a href="#"><span>Soumettre votre hôtel</span></a>
-        </div>
-
-        <div class="footer_assistance">
-          <h3>Assistance</h3>
-          <a href="#"><span>Centre d'aide</span></a>
-          <a href="#"><span>Nous contacter</span></a>
-        </div>
-      </footer>
-    </div>
+      <div class="footer_assistance">
+        <h3>Assistance</h3>
+        <a href="#"><span>Centre d'aide</span></a>
+        <a href="#"><span>Nous contacter</span></a>
+      </div>
+    </footer>
   </body>
 </html>
