--- a/index.html
+++ b/index.html
@@ -359,60 +359,42 @@
             <h1 id="activity">Activités à Marseille</h1>
             <div class="picture_activity">
               <div class="picture1">
-                <a href="#"
-                  ><img
-                    src="images/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg"
-                    alt="picture_Activity"
-                /></a>
-                <h2>Vieux Port</h2>
+                <a href="#">
+                  <h2>Vieux Port</h2>
+                </a>
               </div>
 
               <div class="picture_activity2-3">
                 <div class="picture2">
-                  <a href="#"
-                    ><img
-                      src="images/activites/3_medium/paul-hermann-QFTrLdQIRhI-unsplash.jpg"
-                      alt="picture_Activity"
-                  /></a>
-                  <h2>Port de Pomègues</h2>
+                  <a href="#">
+                    <h2>Port de Pomègues</h2>
+                  </a>
                 </div>
 
                 <div class="picture3">
-                  <a href="#"
-                    ><img
-                      src="images/activites/3_medium/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg"
-                      alt="picture_Activity"
-                  /></a>
-                  <h2>îles du Frioul</h2>
+                  <a href="#">
+                    <h2>îles du Frioul</h2>
+                  </a>
                 </div>
               </div>
 
               <div class="picture4">
-                <a href="#"
-                  ><img
-                    src="images/activites/3_medium/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg"
-                    alt="picture_Activity"
-                /></a>
-                <h2>Parc National des Calanques</h2>
+                <a href="#">
+                  <h2>Parc National des Calanques</h2>
+                </a>
               </div>
 
               <div class="picture_activity5-6">
                 <div class="picture5">
-                  <a href="#"
-                    ><img
-                      src="images/activites/3_medium/florian-wehde-xW9e8gdotxI-unsplash.jpg"
-                      alt="picture_Activity"
-                  /></a>
-                  <h2>Notre-Dame-de-la-Garde</h2>
+                  <a href="#">
+                    <h2>Notre-Dame-de-la-Garde</h2>
+                  </a>
                 </div>
 
                 <div class="picture6">
-                  <a href="#"
-                    ><img
-                      src="images/activites/3_medium/lena-paulin-wH2-EJoDcV0-unsplash.jpg"
-                      alt="picture_Activity"
-                  /></a>
-                  <h2>Parc Longchamp</h2>
+                  <a href="#">
+                    <h2>Parc Longchamp</h2>
+                  </a>
                 </div>
               </div>
             </div>
