--- a/index.html
+++ b/index.html
@@ -119,10 +119,10 @@
       <!--hosting and most popular-->
 
       <section>
-        <div class="section">
+        <div class="section_hosting">
           <div class="contains_hosting">
             <h1 id="hosting">Hébergements à Marseille</h1>
-            <div class="picture_hosting">
+            <div class="picture_hosting_top">
               <div class="hosting_1">
                 <a href="#">
                   <div class="picture_hosting_1">
@@ -192,7 +192,9 @@
                   </div>
                 </a>
               </div>
+            </div>
 
+            <div class="picture_hosting_bottom">
               <div class="hosting_1">
                 <a href="#">
                   <div class="picture_hosting_4">
@@ -274,77 +276,74 @@
                 <i class="fas fa-chart-line"></i>
               </div>
             </div>
-            <div class="picture_most_popular">
-              <a href="#"
-                ><img
-                  src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"
-                  alt="picture"
-              /></a>
-              <div class="description_picture_most_popular1">
-                <h2>
-                  Hôtel Le soleil du <br />
-                  matin
-                </h2>
-                <span>Nuit à partir de 128<strong>€</strong></span>
-                <div class="stars_most_popular">
-                  <div class="stars_blue">
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
+            <div class="contains_picture_most_popular">
+              <div class="picture_most_popular1">
+                <a href="#">
+                  <div class="description_picture_most_popular1">
+                    <h2>
+                      Hôtel Le soleil du <br />
+                      matin
+                    </h2>
+                    <span>Nuit à partir de 128<strong>€</strong></span>
+                    <div class="stars_most_popular">
+                      <div class="stars_blue">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                      </div>
+                    </div>
                   </div>
-                </div>
+                </a>
               </div>
             </div>
-            <div class="picture_most_popular">
-              <a href="#"
-                ><img
-                  src="images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg"
-                  alt="picture"
-              /></a>
-              <div class="description_picture_most_popular2">
-                <h2>
-                  Au coeur de l'eau <br />
-                  chambre d'hôtes
-                </h2>
-                <span>Nuit à partir de 71<strong>€</strong></span>
-                <div class="stars_most_popular">
-                  <div class="stars_blue">
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
+            <div class="contains_picture_most_popular">
+              <div class="picture_most_popular2">
+                <a href="#">
+                  <div class="description_picture_most_popular2">
+                    <h2>
+                      Au coeur de l'eau <br />
+                      chambre d'hôtes
+                    </h2>
+                    <span>Nuit à partir de 71<strong>€</strong></span>
+                    <div class="stars_most_popular">
+                      <div class="stars_blue">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                      </div>
+                      <div class="stars_grey">
+                        <i class="fas fa-star"></i>
+                      </div>
+                    </div>
                   </div>
-                  <div class="stars_grey">
-                    <i class="fas fa-star"></i>
-                  </div>
-                </div>
+                </a>
               </div>
             </div>
-            <div class="picture_most_popular">
-              <a href="#"
-                ><img
-                  src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg"
-                  alt="picture"
-              /></a>
-              <div class="description_picture_most_popular3">
-                <h2>
-                  Hôtel tout bleu et <br />
-                  blanc
-                </h2>
-                <span>Nuit à partir de 68<strong>€</strong></span>
-                <div class="stars_most_popular">
-                  <div class="stars_blue">
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
+            <div class="contains_picture_most_popular">
+              <div class="picture_most_popular3">
+                <a href="#">
+                  <div class="description_picture_most_popular3">
+                    <h2>
+                      Hôtel tout bleu et <br />
+                      blanc
+                    </h2>
+                    <span>Nuit à partir de 68<strong>€</strong></span>
+                    <div class="stars_most_popular">
+                      <div class="stars_blue">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                      </div>
+                      <div class="stars_grey">
+                        <i class="fas fa-star"></i>
+                      </div>
+                    </div>
                   </div>
-                  <div class="stars_grey">
-                    <i class="fas fa-star"></i>
-                  </div>
-                </div>
+                </a>
               </div>
             </div>
           </div>
@@ -354,7 +353,7 @@
       <!--Activity-->
 
       <section>
-        <div class="section">
+        <div class="section_activity">
           <div class="contains_activity">
             <h1 id="activity">Activités à Marseille</h1>
             <div class="picture_activity">
