adjustement description picture

--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
               </div>
             </div>
 
-            <span> <strong>Afficher plus</strong></span>
+            <span class="show_more"> <strong>Afficher plus</strong></span>
           </div>
 
           <div class="most_popular">
