adjusting picture activity

--- a/index.html
+++ b/index.html
@@ -357,44 +357,47 @@
           <div class="contains_activity">
             <h1 id="activity">Activités à Marseille</h1>
             <div class="picture_activity">
-              <div class="picture1">
+              <div class="picture_activity1">
                 <a href="#">
-                  <h2>Vieux Port</h2>
+                  <div class="picture1">
+                    <h2>Vieux Port</h2>
+                  </div>
                 </a>
               </div>
 
               <div class="picture_activity2-3">
-                <div class="picture2">
-                  <a href="#">
+                <a href="#">
+                  <div class="picture2">
                     <h2>Port de Pomègues</h2>
-                  </a>
-                </div>
+                  </div>
+                </a>
 
-                <div class="picture3">
-                  <a href="#">
+                <a href="#">
+                  <div class="picture3">
                     <h2>îles du Frioul</h2>
-                  </a>
-                </div>
+                  </div>
+                </a>
               </div>
 
-              <div class="picture4">
+              <div class="picture_activity4">
                 <a href="#">
-                  <h2>Parc National des Calanques</h2>
+                  <div class="picture4">
+                    <h2>Parc National des Calanques</h2>
+                  </div>
                 </a>
               </div>
 
               <div class="picture_activity5-6">
-                <div class="picture5">
-                  <a href="#">
+                <a href="#">
+                  <div class="picture5">
                     <h2>Notre-Dame-de-la-Garde</h2>
-                  </a>
-                </div>
-
-                <div class="picture6">
-                  <a href="#">
+                  </div>
+                </a>
+                <a href="#">
+                  <div class="picture6">
                     <h2>Parc Longchamp</h2>
-                  </a>
-                </div>
+                  </div>
+                </a>
               </div>
             </div>
           </div>
