--- a/index.html
+++ b/index.html
@@ -122,147 +122,149 @@
         <div class="section_hosting">
           <div class="contains_hosting">
             <h1 id="hosting">Hébergements à Marseille</h1>
-            <div class="picture_hosting_top">
-              <div class="hosting_1">
-                <a href="#">
-                  <div class="picture_hosting_1">
-                    <div class="contain_description_picture_top">
-                      <div class="description_picture1">
-                        <h2>Auberge la Cannebièrre</h2>
-                        <span>Nuit à partir de 25<strong>€</strong></span>
-                        <div class="stars">
-                          <div class="stars_blue">
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                          </div>
-                          <div class="stars_grey">
-                            <i class="fas fa-star"></i>
+            <div class="picture_hosting">
+              <div class="picture_hosting_top">
+                <div class="hosting_1">
+                  <a href="#">
+                    <div class="picture_hosting_1">
+                      <div class="contain_description_picture_top">
+                        <div class="description_picture1">
+                          <h2>Auberge la Cannebièrre</h2>
+                          <span>Nuit à partir de 25<strong>€</strong></span>
+                          <div class="stars">
+                            <div class="stars_blue">
+                              <i class="fas fa-star"></i>
+                              <i class="fas fa-star"></i>
+                              <i class="fas fa-star"></i>
+                              <i class="fas fa-star"></i>
+                            </div>
+                            <div class="stars_grey">
+                              <i class="fas fa-star"></i>
+                            </div>
                           </div>
                         </div>
                       </div>
                     </div>
-                  </div>
-                </a>
+                  </a>
+                </div>
+
+                <div class="hosting_1">
+                  <a href="#">
+                    <div class="picture_hosting_2">
+                      <div class="contain_description_picture_top">
+                        <div class="description_picture2">
+                          <h2>Hôtel du port</h2>
+                          <span>Nuit à partir de 52<strong>€</strong></span>
+                          <div class="stars">
+                            <div class="stars_blue">
+                              <i class="fas fa-star"></i>
+                              <i class="fas fa-star"></i>
+                              <i class="fas fa-star"></i>
+                              <i class="fas fa-star"></i>
+                              <i class="fas fa-star"></i>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </a>
+                </div>
+
+                <div class="hosting_1">
+                  <a href="#">
+                    <div class="picture_hosting_3">
+                      <div class="contain_description_picture_top">
+                        <div class="description_picture3">
+                          <h2>Hôtel Les mouettes</h2>
+                          <span>Nuit à partir de 76<strong>€</strong></span>
+                          <div class="stars">
+                            <div class="stars_blue">
+                              <i class="fas fa-star"></i>
+                              <i class="fas fa-star"></i>
+                              <i class="fas fa-star"></i>
+                              <i class="fas fa-star"></i>
+                            </div>
+                            <div class="stars_grey">
+                              <i class="fas fa-star"></i>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </a>
+                </div>
               </div>
 
-              <div class="hosting_1">
-                <a href="#">
-                  <div class="picture_hosting_2">
-                    <div class="contain_description_picture_top">
-                      <div class="description_picture2">
-                        <h2>Hôtel du port</h2>
-                        <span>Nuit à partir de 52<strong>€</strong></span>
-                        <div class="stars">
-                          <div class="stars_blue">
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
+              <div class="picture_hosting_bottom">
+                <div class="hosting_1">
+                  <a href="#">
+                    <div class="picture_hosting_4">
+                      <div class="contain_description_picture_bottom">
+                        <div class="description_picture4">
+                          <h2>Hôtel de la mer</h2>
+                          <span>Nuit à partir de 46<strong>€</strong></span>
+                          <div class="stars">
+                            <div class="stars_blue">
+                              <i class="fas fa-star"></i>
+                              <i class="fas fa-star"></i>
+                              <i class="fas fa-star"></i>
+                            </div>
+                            <div class="stars_grey">
+                              <i class="fas fa-star"></i>
+                              <i class="fas fa-star"></i>
+                            </div>
                           </div>
                         </div>
                       </div>
                     </div>
-                  </div>
-                </a>
-              </div>
+                  </a>
+                </div>
 
-              <div class="hosting_1">
-                <a href="#">
-                  <div class="picture_hosting_3">
-                    <div class="contain_description_picture_top">
-                      <div class="description_picture3">
-                        <h2>Hôtel Les mouettes</h2>
-                        <span>Nuit à partir de 76<strong>€</strong></span>
-                        <div class="stars">
-                          <div class="stars_blue">
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                          </div>
-                          <div class="stars_grey">
-                            <i class="fas fa-star"></i>
+                <div class="hosting_1">
+                  <a href="#">
+                    <div class="picture_hosting_5">
+                      <div class="contain_description_picture_bottom">
+                        <div class="description_picture5">
+                          <h2>Auberge Le Panier</h2>
+                          <span>Nuit à partir de 23<strong>€</strong></span>
+                          <div class="stars">
+                            <div class="stars_blue">
+                              <i class="fas fa-star"></i>
+                              <i class="fas fa-star"></i>
+                              <i class="fas fa-star"></i>
+                              <i class="fas fa-star"></i>
+                            </div>
+                            <div class="stars_grey">
+                              <i class="fas fa-star"></i>
+                            </div>
                           </div>
                         </div>
                       </div>
                     </div>
-                  </div>
-                </a>
-              </div>
-            </div>
+                  </a>
+                </div>
 
-            <div class="picture_hosting_bottom">
-              <div class="hosting_1">
-                <a href="#">
-                  <div class="picture_hosting_4">
-                    <div class="contain_description_picture_bottom">
-                      <div class="description_picture4">
-                        <h2>Hôtel de la mer</h2>
-                        <span>Nuit à partir de 46<strong>€</strong></span>
-                        <div class="stars">
-                          <div class="stars_blue">
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                          </div>
-                          <div class="stars_grey">
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
+                <div class="hosting_1">
+                  <a href="#">
+                    <div class="picture_hosting_6">
+                      <div class="contain_description_picture_bottom">
+                        <div class="description_picture6">
+                          <h2>Hôtel chez Amina</h2>
+                          <span>Nuit à partir de 96<strong>€</strong></span>
+                          <div class="stars">
+                            <div class="stars_blue">
+                              <i class="fas fa-star"></i>
+                              <i class="fas fa-star"></i>
+                              <i class="fas fa-star"></i>
+                              <i class="fas fa-star"></i>
+                              <i class="fas fa-star"></i>
+                            </div>
                           </div>
                         </div>
                       </div>
                     </div>
-                  </div>
-                </a>
-              </div>
-
-              <div class="hosting_1">
-                <a href="#">
-                  <div class="picture_hosting_5">
-                    <div class="contain_description_picture_bottom">
-                      <div class="description_picture5">
-                        <h2>Auberge Le Panier</h2>
-                        <span>Nuit à partir de 23<strong>€</strong></span>
-                        <div class="stars">
-                          <div class="stars_blue">
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                          </div>
-                          <div class="stars_grey">
-                            <i class="fas fa-star"></i>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </a>
-              </div>
-
-              <div class="hosting_1">
-                <a href="#">
-                  <div class="picture_hosting_6">
-                    <div class="contain_description_picture_bottom">
-                      <div class="description_picture6">
-                        <h2>Hôtel chez Amina</h2>
-                        <span>Nuit à partir de 96<strong>€</strong></span>
-                        <div class="stars">
-                          <div class="stars_blue">
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </a>
+                  </a>
+                </div>
               </div>
             </div>
 
